# Scarlet-Mustard

./: .gitignore  CMakeLists.txt  README.md
AggressiveRoadrunner/: CMakeLists.txt  main.cpp
FierceVenom/: Base.cpp  Base.h  CMakeLists.txt  Delegate.cpp  Delegate.h
